--- a/app/src/main/res/layout/fragment_best_places.xml
+++ b/app/src/main/res/layout/fragment_best_places.xml
@@ -8,15 +8,17 @@
 
     <TextView
         android:id="@+id/text_best_places"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="320dp"
+        android:layout_marginEnd="5dp"
+        android:text="Soon you can see best places in the city there!"
         android:textAlignment="center"
+        android:textColor="#020400"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.495" />
 </androidx.constraintlayout.widget.ConstraintLayout>
